--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,7 +1,7 @@
 <div id="box">
 
     <nav>
-        <img src="./static/img/logo.webp" alt="logo">
+        <img src="img/logo.webp" alt="logo">
 
         <ul class="menu">
             <li><a href="/">Home</a></li>
@@ -22,7 +22,7 @@
                 <!-- If there are posts for creature in the database display each of them -->
                 <div class="flip flip-vertical">
                     <div class="front">
-                        <img src="./static/img/jungle-cruise.jpeg"
+                        <img src="img/jungle-cruise.jpeg"
                             alt="Jungle-Cruise">
                     </div>
                     <div class="back">
@@ -35,7 +35,7 @@
 
                 <div class="flip flip-vertical">
                     <div class="front">
-                        <img src="./static/img/the-little-mermaid.jpg"
+                        <img src="img/the-little-mermaid.jpg"
                             alt="The-Litlle-Mermaid">
                     </div>
                     <div class="back">
@@ -48,7 +48,7 @@
 
                 <div class="flip flip-vertical">
                     <div class="front">
-                        <img src="./static/img/home-alone.jpeg"
+                        <img src="img/home-alone.jpeg"
                             alt="Home-Alone">
                     </div>
                     <div class="back">
