--- a/src/views/cast/create.hbs
+++ b/src/views/cast/create.hbs
@@ -5,7 +5,7 @@
                 <h2>"You're gonna need a bigger boat." — "Jaws," 1975.</h2>
             </div>
 
-            <form action="cast/create" method="POST" class="createCastForm">
+            <form method="POST" class="createCastForm">
                 <h2>Add Cast</h2>
                 <ul class="noBullet">
                     <li>
