--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -19,10 +19,10 @@
                 <!--Users-->
                 <li><a href="/create">Create Post</a></li>
                 <li><a href="/cast/create">Create Cast</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/logout">Logout</a></li>
                 <!--Guest-->
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
             </ul>
         </nav>
 
