--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -17,12 +17,15 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/search">Search</a></li>
                 <!--Users-->
+                {{#if isAuthenticated}}
                 <li><a href="/create">Create Post</a></li>
                 <li><a href="/cast/create">Create Cast</a></li>
                 <li><a href="/logout">Logout</a></li>
+                {{else}}
                 <!--Guest-->
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
+                {{/if}}
             </ul>
         </nav>
 
